--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dio: ^5.2.1+1
   shared_preferences: ^2.1.2
   cool_alert: ^2.0.1
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
