--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   cool_alert: ^2.0.1
   loading_animation_widget: ^1.2.0+4
   get_storage: ^2.1.1
+  dropdown_button2: ^2.1.4
+  device_info: ^2.0.3
 
 dev_dependencies:
   flutter_test:
