--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   get_storage: ^2.1.1
   dropdown_button2: ^2.1.4
   device_info: ^2.0.3
+  image_cropper: ^5.0.0
 
 dev_dependencies:
   flutter_test:
